<resources>
    <string name="app_name">Gradebook</string>
    <string name="action_settings">Settings</string>
    <string name="matt_geib">Matt Geib</string>
    <string name="robert_seifert">Robert Seifert</string>
    <string name="andy_sisinger">Andy Sisinger</string>
    <string name="nathan_mayer">Nathan Mayer</string>
    <string name="title_activity_courses">My Courses</string>
    <string name="title_activity_add_edit_delete_course">AddEditDeleteCourseActivity</string>
    <string name="title_activity_course_assignment">Course Assignments</string>
    <string name="title_activity_add_edit_delete_assignment">AddEditDeleteAssignmentActivity</string>
    <string name="assignments_due_in_the_next_7_days">Assignments due in the next 7 days:</string>
    <string name="go_to_Courses">GO TO COURSES</string>
    <string name="assignment_name">Assignment Name:</string>
    <string name="go_back_to_Courses">GO BACK TO COURSES</string>
    <string name="course_name_placeholder">CS Practicum - 395</string>
    <string name="assignment_name_hint">Homework 1</string>
    <string name="add_assignment_button">Add Assignment</string>
    <string name="assignment_due_date">Assignment Due Date:</string>
    <string name="due_date_hint">mm/dd/yyyy</string>
    <string name="student_score">Your Score:</string>
    <string name="max_score">Maximum Score:</string>
    <string name="score_hint">30</string>
    <string name="course_id">Course ID:</string>
    <string name="course_id_hint">COMP395-Q1WW</string>
    <string name="course_name">Course Name:</string>
    <string name="save_button">Save</string>
    <string name="delete_button">Delete</string>
    <string name="edit_button">Edit</string>
    <string name="courses_table_col_id"> ID </string>
    <string name="courses_table_col_name"> Class Name </string>
    <string name="courses_table_col_grades"> Grade </string>
    <string name="courses_add_new"> Add New Course </string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="no_file_manager_present">No file manager installed</string>
    <string name="title_activity_import">ImportActivity</string>
    <string name="title_activity_export">ExportActivity</string>
    <string name="title_activity_clear">ClearActivity</string>
</resources>
