<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addAssignmentButton"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.matth.gradebook.CourseAssignmentActivity"
    tools:showIn="@layout/activity_course_assignment">

    <Button
        android:id="@+id/goBackToCourses"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:onClick="go_to_Courses"
        android:text="@string/go_back_to_Courses"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/courseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/course_name_placeholder"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goBackToCourses"
        tools:layout_constraintLeft_creator="1" />

    <Button
        android:id="@+id/editCourseButton"
        android:layout_width="70dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/goBackToCourses"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="7dp"
        android:text="@string/edit_button"
        android:layout_marginRight="10dp"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/button"
        android:layout_width="173dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/add_assignment_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="addAssignment"
        app:layout_constraintHorizontal_bias="0.502"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/courseStatsTextView" />

    <TextView
        android:id="@+id/courseStatsTextView"
        android:layout_width="360dp"
        android:layout_height="66dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="15dp"
        android:text="Course Stats: "
        android:textAlignment="viewStart"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_assignment_list"
        tools:layout_editor_absoluteX="12dp" />

    <ListView
        android:id="@+id/course_assignment_list"
        android:layout_width="365dp"
        android:layout_height="229dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:divider="@android:drawable/divider_horizontal_textfield"
        android:footerDividersEnabled="true"
        android:headerDividersEnabled="true"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseName" />


</android.support.constraint.ConstraintLayout>
