<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.matth.gradebook.CoursesActivity"
    tools:showIn="@layout/activity_courses">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@android:color/white"
        android:orientation="vertical">
        <ScrollView
            android:id="@+id/table_courses_scroll"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="#3d455b">

            <RelativeLayout
                android:id="@+id/table_courses_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TableLayout
                    android:id="@+id/table_courses"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:stretchColumns="*">

                    <TableRow
                        android:id="@+id/table_courses_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#FFFFFF">

                        <TextView
                            android:id="@+id/table_courses_header_c1"
                            android:layout_column="0"
                            android:gravity="center"
                            android:padding="3dip"
                            android:text="@string/courses_table_col_id"
                            android:textSize="20dp" />

                        <TextView
                            android:id="@+id/table_courses_header_c2"
                            android:layout_column="1"
                            android:gravity="center"
                            android:padding="3dip"
                            android:text="@string/courses_table_col_name"
                            android:textSize="20dp" />

                        <TextView
                            android:id="@+id/table_courses_header_c3"
                            android:layout_column="2"
                            android:gravity="center"
                            android:padding="3dip"
                            android:text="@string/courses_table_col_grades"
                            android:textSize="20dp" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:text="COMP101"
                            android:textSize="15dp" />

                        <TextView
                            android:text="Intro to computer programming"
                            android:textSize="15dp" />

                        <TextView
                            android:text="@string/courses_table_col_grades"
                            android:textSize="15dp" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:text="COMP101"
                            android:textSize="15dp" />

                        <TextView
                            android:text="Intro to computer programming"
                            android:textSize="15dp" />

                        <TextView
                            android:text="@string/courses_table_col_grades"
                            android:textSize="15dp" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:text="COMP101"
                            android:textSize="15dp" />

                        <TextView
                            android:text="Intro to computer programming"
                            android:textSize="15dp" />

                        <TextView
                            android:text="@string/courses_table_col_grades"
                            android:textSize="15dp" />
                    </TableRow>
                </TableLayout>
            </RelativeLayout>
        </ScrollView>
        <Button
            android:id="@+id/button_courses_new"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/courses_add_new" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
